Added delete holidays and event functionlaity

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -27,6 +27,9 @@
                   </div>
             </div>
        </div>
+       <div id="add-events-output" class="font-mono">
+           <!-- result of adding events will be shown here -->
+       </div>
     </section>
 
     <section id="display-contact-cards" class="col-start-4 col-end-7 row-start-1">
