Display and Delete Post is working

--- a/public/style.css
+++ b/public/style.css
@@ -488,14 +488,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column-start: 5;
 }
 
-.col-start-4 {
-  grid-column-start: 4;
-}
-
-.col-start-3 {
-  grid-column-start: 3;
-}
-
 .col-end-2 {
   grid-column-end: 2;
 }
@@ -510,34 +502,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .col-end-3 {
   grid-column-end: 3;
-}
-
-.col-end-4 {
-  grid-column-end: 4;
-}
-
-.col-end-7 {
-  grid-column-end: 7;
-}
-
-.row-span-full {
-  grid-row: 1 / -1;
-}
-
-.row-start-1 {
-  grid-row-start: 1;
-}
-
-.row-start-auto {
-  grid-row-start: auto;
-}
-
-.row-end-2 {
-  grid-row-end: 2;
-}
-
-.row-end-3 {
-  grid-row-end: 3;
 }
 
 .mx-auto {
@@ -563,6 +527,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .mt-12 {
@@ -665,6 +634,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 2rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .block {
   display: block;
 }
@@ -725,10 +702,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 32rem;
 }
 
-.max-w-sm {
-  max-width: 24rem;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -749,10 +722,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -761,8 +730,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-between {
@@ -862,10 +839,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.75rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
 .px-64 {
   padding-left: 16rem;
   padding-right: 16rem;
@@ -928,10 +901,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-14 {
   padding-top: 3.5rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .pr-10 {
@@ -1246,6 +1215,16 @@ form textarea::placeholder{
 
 #admin-page{
   max-width: 100rem;
+}
+
+/* USER POSTS Page */
+
+#all-user-posts{
+  max-width: 90rem;
+}
+
+#all-user-posts > div{
+  max-width: 40rem;
 }
 
 .hover\:cursor-pointer:hover {
