Other User's post section added
-Added POST DB for displaying posts of other users
-Added Like & Comment button functionality
-Added ability to make comments

--- a/src/style.css
+++ b/src/style.css
@@ -121,6 +121,14 @@ form textarea::placeholder{
   bottom: 1.5rem;
 }
 
+/* Post Section */
+.like-button, .comment-button{
+  color: #A78BFA;
+}
+#posts ul li{
+  color: #A78BFA;
+}
+
 /* FOOTER section */
 #contact-section{
   display: grid;
