--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
         <button type="submit" class="primary-button mb-3 w-full">Log-In</button>
         <div class="flex flex-row justify-between mt-5">
           <p class="inline-block">Don't have an account? <a href="/register" class="font-bold text-violet-400 hover:cursor-pointer "> Sign up</a></p>
-          <a class="hover:text-violet-500 cursor-pointer">Forgot Password</a>
+          <!-- <a class="hover:text-violet-500 cursor-pointer">Forgot Password</a> -->
         </div>
       </div>
     </form>
