--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
       </div>
       <ul class="flex flex-row">  
         <li class="p-4"><a href="" class="no-underline">Home</a></li>
-        <li class="p-4"><a href="" class="no-underline">Materials</a></li>
+        <li class="p-4"><a href="/materials" class="no-underline">Materials</a></li>
         <li class="p-4"><a href="/events" class="no-underline">Events</a></li>
         <li class="p-4"><a href="#contact-section" class="no-underline">Contact</a></li>
         <li class="p-4 relative" id="user-icon"><i class="fas fa-user hover:cursor-pointer"></i>
