Upload Profile Picture and Materials Page working
1. Uploading profile picture feature
2. Uploading subject materials from the Admin Page
3. Downloading subject materials from Materials Page
4. Displaying user images when the posts are displayed

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -31,6 +31,13 @@
                 <!-- result of adding events will be shown here -->
             </div>
          </section>
+         <section id="upload-subject-materials" class="mt-8">
+            <form>
+                <input type="file" name="file" accept=".zip, .rar" class="mr-48">
+                <button type="submit" class="primary-button">Upload</button>
+            </form>
+            <p id="upload-materials-output" class="mt-2 justify-self-center"></p>
+         </section>
     </div>
 
     <div class="col-start-2 col-end-3" >
