--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -2,7 +2,7 @@
     <%- include("./partials/navbar"); -%>
 
     <section class="max-w-7xl mx-auto flex flex-row flex-wrap my-16" id="all-user-posts">
-        <div class="card p-3 mt-5 ml-4">
+        <!-- <div class="card p-3 mt-5 ml-4">
             <div class="flex flex-row justify-end">
                 <button class="delete-contact-card" value="${contact._id}"><i class="fas fa-trash-alt hover:text-violet-500 ml-5 hover:cursor-pointer"></i></button>
             </div>
@@ -12,7 +12,7 @@
               <li class="mr-3 hover:text-violet-400 cursor-pointer"><i class="fas fa-heart"></i><span class="ml-1">9K+</span</li>
               <li class="hover:text-violet-400 cursor-pointer"><i class="far fa-comment-alt"></i><span class="ml-1">50</span></li>
             </ul>
-        </div>
+        </div> -->
        
     </section>
     <script src="/posts.js"></script>
