--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <div class="col-start-1 col-end-2">
       <!-- Name and profile picture section  -->
       <section id="user-picture" class=" flex flex-col items-center">
-        <img src="/images/Resume Photo.jpg" alt="image could not be loaded" class="rounded-full h-60 w-60 ">
+        <img src="/images/user image.png" alt="image could not be loaded" class="rounded-full h-60 w-60 ">
         <h1 class="mt-5 text-white"><%=name.firstName %> <%= name.lastName%></h1>
       </section>
       
@@ -94,6 +94,16 @@
   <div id="user-profile-wrapper" class="hidden">
     <section id="user-profile" class="card max-w-7xl mx-auto">
       <i class="fas fa-times fa-2x hover:text-violet-500 hover:cursor-pointer" id="user-profile-cancel-button"></i>
+      <div class="flex flex-col items-center mb-11">
+        <img src="" alt="image could not be loaded" class="rounded-full h-48 w-48">
+        <form class="mt-2">
+          <input type="file" name="image" accept=".png, .jpeg, .jpg">
+          <button type="submit" class="secondary-button w-16">Upload Image</button>
+        </form>
+        <p class="mt-2">
+          <!-- Output from the server for uploading the image -->
+        </p>
+      </div>
       <div id="Name" class="grid grid-cols-2 gap-10 mb-4 pr-20">
         <div>
           <label for="first-name" class="block mb-2 text-xl">First Name</label>
