--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,7 +50,7 @@
       <!-- Section where Posts of other Users are displayed -->
       <section id="posts" class="col-start-2 col-end-5 px-20 mt-6">
         <div>
-          <button class="secondary-button my-5 ml-80">Load More</button>
+          <!-- <button class="secondary-button my-5 ml-80">Load More</button> -->
         </div>
       </section>
     </div>
@@ -156,4 +156,5 @@
     </div>
   </div>
   <script src="/app.js"></script>
+  <script src="/page links.js"></script>
 <%- include("./partials/footer"); -%>
