--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -16,5 +16,6 @@
        
     </section>
     <script src="/posts.js"></script>
+    <script src="/page links.js"></script>
 <%- include("./partials/footer"); -%>
 
